--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     margin: 0;
-    background-color: crimson;
+    background-color: rgb(190, 12, 48);
 }
 
 nav {
